@@ -1913,6 +1913,7 @@ COB_EXPIMP void		cob_move_ibm	(void *, void *, const int);
 COB_EXPIMP void		cob_init_table	(void *, const size_t, const size_t);
 COB_EXPIMP void		cob_set_int	(cob_field *, const int);
 COB_EXPIMP int		cob_get_int	(cob_field *);
+COB_EXPIMP void		cob_set_llint	(cob_field *, const cob_s64_t);
 COB_EXPIMP cob_s64_t	cob_get_llint	(cob_field *);
 /*************************************************************************/
 /* Functions in move.c for C access to COBOL data - GnuCOBOL COBOL-C-API */
